--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
     
     <title>LA PTU FELIZ</title>
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-info">
+<header>
+  <button onclick="generarNuevoColor()">Generar Color</button>
+</header>
+ 
+ <nav class="navbar navbar-expand-lg navbar-light bg-info">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
