Eliminacion de lineas extras

--- a/index.html
+++ b/index.html
@@ -11,12 +11,8 @@
     
     <title>LA PTU FELIZ</title>
 </head>
-
 <body>
-<header>
-  <button onclick="generarNuevoColor()">Generar Color</button>
-</header>
- 
+  <button onclick="generarNuevoColor()">Cambia el color</button>
  <nav class="navbar navbar-expand-lg navbar-light bg-info">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,7 +55,7 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-    <div class="list-group">
+    <div class="container class="list-group">
         <a href="#" class="list-group-item list-group-item-action active bg-info"  aria-current="true">
          <h1>Sitios de interés</h1>
         </a>
@@ -69,7 +65,7 @@
        <!--<a href="#" class="list-group-item list-group-item-action disabled" tabindex="-1" aria-disabled="true">A disabled link item</a>  -->
         
       </div>
-      <footer>
+      <footer class="container">
         <div class="card text-center">
           <div class="card-header">
             <h3 class="card  bg-danger font-size: 2rem ">Redes sociales</h3>
