--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="navbar-nav">
             <a class="nav-link active" href="index.html">INICIO <span class="sr-only">(current)</span></a>
             <a class="nav-link" href="lenguaje.html">LENGUAJE</a>
-            <a class="nav-link" href="Matemtica.html">MATEMATICA</a>
+            <a class="nav-link" href="Matematica.html">MATEMATICA</a>
             <a class="nav-link" href="contacto.html">CONTACTO</a>
     
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
