--- a/contacto.html
+++ b/contacto.html
@@ -23,7 +23,7 @@
             <a class="nav-link active" href="#">CONTACTO <span class="sr-only">(current)</span></a>
             <a class="nav-link" href="index.html">INICIOO</a>
             <a class="nav-link" href="lenguaje.html">LENGUAJE</a>
-            <a class="nav-link" href="Matemtica.html">MATEMATICA</a>
+            <a class="nav-link" href="Matematica.html">MATEMATICA</a>
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           
           </div>
