--- a/lenguaje.html
+++ b/lenguaje.html
@@ -21,7 +21,7 @@
           <div class="navbar-nav">
             <a class="nav-link active" href="#">LENGUAJE <span class="sr-only">(current)</span></a>
             <a class="nav-link" href="index.html">INICIO</a>
-            <a class="nav-link" href="Matemtica.html">MATEMATICA</a>
+            <a class="nav-link" href="Matematica.html">MATEMATICA</a>
             <a class="nav-link" href="contacto.html">CONTACTO</a>
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </div>
