--- a/lenguaje.html
+++ b/lenguaje.html
@@ -23,7 +23,8 @@
             <a class="nav-link" href="index.html">INICIO</a>
             <a class="nav-link" href="Matematica.html">MATEMATICA</a>
             <a class="nav-link" href="contacto.html">CONTACTO</a>
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            <a class="nav-link" href="cuentaRegresiva.html">CUENTA REGRESIVA</a>
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
           </div>
         </div>
       </nav>
