--- a/lenguaje.html
+++ b/lenguaje.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="estilo.css"/>
+    <link rel="stylesheet" href="./css/estilo.css"/>
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-   
-    <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
+    <title>LENGUAJE</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-info">
@@ -31,7 +33,21 @@
 
         </div>
       </nav>
- <nav>
+      <h2 class="libros">Libros que debes leer</h2>
+      <main class="container-fluid">
+        <div class="carousel">
+            <div class="carousel__slide">
+                <img src="https://i.pinimg.com/originals/6c/a3/a7/6ca3a756f077c628ed7b6b3234863422.jpg" class="d-block w-100" alt="Elprincipito">
+            </div>
+            <div class="carousel__slide">
+                <img src="https://images.cdn3.buscalibre.com/fit-in/360x360/61/8d/618d227e8967274cd9589a549adff52d.jpg" class="d-block w-100" alt="cienaniosdesoledad">
+            </div>
+            <div class="carousel__slide">
+                <img src="https://i.pinimg.com/originals/20/5d/31/205d3176cf78043340d2d93e7d1ff907.jpg" class="d-block w-100" alt="Elquijote">
+            </div>
+          </div>
+    </main>
+      <nav>
   <div class="container">
     <div class="row">
       <div class="col-sm">
@@ -77,6 +93,7 @@
     </div>
   </div>
 </footer>
+<script src="./js/carruselnuevo.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
