--- a/Matematica.html
+++ b/Matematica.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="estilo.css"/> 
+    <link rel="stylesheet" href="./css/estilo.css"/> 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
    
@@ -34,9 +34,9 @@
         <p>Establece una metodología y un plan de estudios, diseña un cronograma con un mínimo de días a la semana para practicar los ejercicios y haz tu mejor esfuerzo para cumplirlo. Puedes fijar 1 o 2 horas durante 3 días a la semana. Incluye también horas de práctica en grupo con tus compañeros, para resolver dudas e intercambiar ideas.
         <p>Otra eficaz manera de potenciar tus aprendizajes es por medio de las simulaciones PSU, las cuales te permiten comprobar cuáles son tus fortalezas y debilidades.</p>
         <p>Recuerda que tu ingreso a la universidad depende de tus resultados, si te preparas con antelación y organización, podrás obtener un buen puntaje y elegir la carrera de tus sueños.</p>
-      <button>Click</button>
+      
       </section>
-
+      <button id="estudiar">Click</button>
       <footer>
         <div class="card text-center">
           <div class="card-header">
