se cambia fondo
Se agrega background-image

--- a/lenguaje.html
+++ b/lenguaje.html
@@ -33,7 +33,7 @@
 
         </div>
       </nav>
-      <h2 class="libros">Libros que debes leer</h2>
+      <P>Libros que debes leer</P>
       <main class="container-fluid">
         <div class="carousel">
             <div class="carousel__slide">
@@ -75,7 +75,6 @@
  <footer>
   <div class="card text-center">
     <div class="card-header">
-      Featured
     </div>
     <div class="card-body bg-info">
       <h5 class="card-title">Busca nuestras redes sociales</h5>
