--- a/Matematica.html
+++ b/Matematica.html
@@ -29,15 +29,15 @@
           </div>
         </div>
       </nav>
-      <section>
+      <section class="container">
         <p id="primero">Las matemáticas son fundamentales para el desarrollo intelectual de los niños, les ayuda a ser lógicos, a razonar ordenadamente y a tener una mente preparada para el pensamiento, la crítica y la abstracción.</p>
         <p>Establece una metodología y un plan de estudios, diseña un cronograma con un mínimo de días a la semana para practicar los ejercicios y haz tu mejor esfuerzo para cumplirlo. Puedes fijar 1 o 2 horas durante 3 días a la semana. Incluye también horas de práctica en grupo con tus compañeros, para resolver dudas e intercambiar ideas.
         <p>Otra eficaz manera de potenciar tus aprendizajes es por medio de las simulaciones PSU, las cuales te permiten comprobar cuáles son tus fortalezas y debilidades.</p>
         <p>Recuerda que tu ingreso a la universidad depende de tus resultados, si te preparas con antelación y organización, podrás obtener un buen puntaje y elegir la carrera de tus sueños.</p>
       
       </section>
-      <button id="estudiar">Click</button>
-      <footer>
+      <button>Click</button>
+      <footer class="container">
         <div class="card text-center">
           <div class="card-header">
           </div>
