--- a/lenguaje.html
+++ b/lenguaje.html
@@ -72,7 +72,7 @@
     </div>
   </div>
  </nav>
- <footer>
+ <footer class="container">
   <div class="card text-center">
     <div class="card-header">
     </div>
