--- a/Matematica.html
+++ b/Matematica.html
@@ -1,62 +1,83 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/estilo.css"/> 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-   
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/estilo.css" />
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+    crossorigin="anonymous"></script>
+
+  <title>Document</title>
 </head>
+
 <body>
   <h1>PREPARATE PARA LA PTU DE MATEMATICA</h1>
-    <nav class="navbar navbar-expand-lg navbar-light bg-info">
-        <a class="navbar-brand" href="#"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link active" href="#">MATEMATICA<span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="index.html">INICIO</a>
-            <a class="nav-link" href="lenguaje.html">LENGUAJE</a>
-             <a class="nav-link" href="contacto.html">CONTACTO</a>
-             <a class="nav-link" href="cuentaRegresiva.html">CUENTA REGRESIVA</a>
-             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
-          </div>
-        </div>
-      </nav>
-      <section>
-        <p id="primero">Las matemáticas son fundamentales para el desarrollo intelectual de los niños, les ayuda a ser lógicos, a razonar ordenadamente y a tener una mente preparada para el pensamiento, la crítica y la abstracción.</p>
-        <p>Establece una metodología y un plan de estudios, diseña un cronograma con un mínimo de días a la semana para practicar los ejercicios y haz tu mejor esfuerzo para cumplirlo. Puedes fijar 1 o 2 horas durante 3 días a la semana. Incluye también horas de práctica en grupo con tus compañeros, para resolver dudas e intercambiar ideas.
-        <p>Otra eficaz manera de potenciar tus aprendizajes es por medio de las simulaciones PSU, las cuales te permiten comprobar cuáles son tus fortalezas y debilidades.</p>
-        <p>Recuerda que tu ingreso a la universidad depende de tus resultados, si te preparas con antelación y organización, podrás obtener un buen puntaje y elegir la carrera de tus sueños.</p>
-      
-      </section>
-      <button id="estudiar">Click</button>
-      <footer>
-        <div class="card text-center">
-          <div class="card-header">
-          </div>
-          <div class="card-body bg-info">
-            <h5 class="card-title">Busca nuestras redes sociales</h5>
-            <p class="card-text">Tenemos muchas ganas de conocerte!</p>
-            <a href="http://instragram.com" class="btn btn-primary">INSTAGRAM</a>
-            <a href="http://FACEBOOK.com" class="btn btn-primary">FACEBOOK</a>
-            <a href="http://twitter.com" class="btn btn-primary">TWITTER</a>
-          </div>
-          <div class="card-footer text-muted">
-            <p>Todos los derechos reservados La PTU feliz 2021</p>
-          </div>
-        </div>
-      </footer>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="./js/mainJs.js"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+  <nav class="navbar navbar-expand-lg navbar-light bg-info">
+    <a class="navbar-brand" href="#"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link active" href="#">MATEMATICA<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">INICIO</a>
+        <a class="nav-link" href="lenguaje.html">LENGUAJE</a>
+        <a class="nav-link" href="contacto.html">CONTACTO</a>
+        <a class="nav-link" href="cuentaRegresiva.html">CUENTA REGRESIVA</a>
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
+      </div>
+    </div>
+  </nav>
+  <section>
+    <p id="primero">Las matemáticas son fundamentales para el desarrollo intelectual de los niños, les ayuda a ser
+      lógicos, a razonar ordenadamente y a tener una mente preparada para el pensamiento, la crítica y la abstracción.
+    </p>
+    <p>Establece una metodología y un plan de estudios, diseña un cronograma con un mínimo de días a la semana para
+      practicar los ejercicios y haz tu mejor esfuerzo para cumplirlo. Puedes fijar 1 o 2 horas durante 3 días a la
+      semana. Incluye también horas de práctica en grupo con tus compañeros, para resolver dudas e intercambiar ideas.
+    <p>Otra eficaz manera de potenciar tus aprendizajes es por medio de las simulaciones PSU, las cuales te permiten
+      comprobar cuáles son tus fortalezas y debilidades.</p>
+    <p>Recuerda que tu ingreso a la universidad depende de tus resultados, si te preparas con antelación y organización,
+      podrás obtener un buen puntaje y elegir la carrera de tus sueños.</p>
+
+  </section>
+  <button id="estudiar">Click</button>
+  <footer>
+    <div class="card text-center">
+      <div class="card-header">
+      </div>
+      <div class="card-body bg-info">
+        <h5 class="card-title">Busca nuestras redes sociales</h5>
+        <p class="card-text">Tenemos muchas ganas de conocerte!</p>
+        <a href="http://instragram.com" class="btn btn-primary">INSTAGRAM</a>
+        <a href="http://FACEBOOK.com" class="btn btn-primary">FACEBOOK</a>
+        <a href="http://twitter.com" class="btn btn-primary">TWITTER</a>
+      </div>
+      <div class="card-footer text-muted">
+        <p>Todos los derechos reservados La PTU feliz 2021</p>
+      </div>
+    </div>
+  </footer>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="./js/mainJs.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+    integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
