Refactorización de código
Se removieron logs
Se reestructuro el menú
Fix varios

--- a/contacto.html
+++ b/contacto.html
@@ -28,10 +28,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" href="#">CONTACTO <span class="sr-only">(current)</span></a>
-        <a class="nav-link" href="index.html">INICIOO</a>
+        
+        <a class="nav-link" href="index.html">INICIO</a>
         <a class="nav-link" href="lenguaje.html">LENGUAJE</a>
         <a class="nav-link" href="Matematica.html">MATEMATICA</a>
+        <a class="nav-link active" href="#">CONTACTO <span class="sr-only">(current)</span></a>
         <a class="nav-link" href="cuentaRegresiva.html">CUENTA REGRESIVA</a>
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
 
