--- a/Matematica.html
+++ b/Matematica.html
@@ -59,6 +59,8 @@
       </div>
     </nav>
     <section>
+      <h1>¿POR QUE SON IMPORTANTES LAS MATEMATICAS?</h1>
+      <h2>¿Como las estudio?</h2>
       <p id="primero">
         Las matemáticas son fundamentales para el desarrollo intelectual de los
         niños, les ayuda a ser lógicos, a razonar ordenadamente y a tener una
