--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
           </div>
         </div>
       </nav>
-  <div class="container">
+      <h1>Estudio colaborativo para la PTU</h1>
+      <p>Queremos que a todos nos vaya bien en la PTU, para esto elaboramos nuestra página web de estudio colaborativo. Cuando enseñas a tus compañeros refuerzas tu aprendizaje. En nuestra sección de contacto puedes inscribirte como estudiante o colaborador. Te esperamos</p>
+      
+      <div class="container">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
