--- a/contacto.html
+++ b/contacto.html
@@ -15,7 +15,7 @@
     integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
     crossorigin="anonymous"></script>
 
-  <title>Document</title>
+  <title>Contacto</title>
 </head>
 
 <body>
