--- a/contacto.html
+++ b/contacto.html
@@ -58,7 +58,7 @@
 
         <div class="form-group">
           <label for="inputAddress">Dirección</label>
-          <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+          <input type="text" class="form-control" id="inputAddress" placeholder="Ingresa tu dirección">
         </div>
         <div class="form-row">
           <div class="form-group col-md-6">
