--- a/lenguaje.html
+++ b/lenguaje.html
@@ -42,7 +42,7 @@
 
   </div>
   </nav>
-  <h2>Libros que debes leer</h2>
+  <h2>Libros que debes leer para practicar la comprensión lectora</h2>
   <main class="container-fluid">
     <div class="carousel">
       <div class="carousel__slide">
