Se agrega link de whatsApp
Link para grupo de estudio de lenguaje y matematica

--- a/Matematica.html
+++ b/Matematica.html
@@ -88,6 +88,9 @@
     <button id="estudiar">Click</button>
     <footer>
       <div class="card text-center">
+        <a href="https://chat.whatsapp.com/Ce6vA71FmXI0KarqUMKMbv"
+          >Ingresa a nuestro whatsApp de estudio</a
+        >
         <div class="card-header"></div>
         <div class="card-body bg-info">
           <h5 class="card-title">Busca nuestras redes sociales</h5>
@@ -102,6 +105,7 @@
       </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <script src="./js/mainJs.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
