--- a/lenguaje.html
+++ b/lenguaje.html
@@ -87,6 +87,7 @@
   </nav>
   <footer>
     <div class="card text-center">
+      <a href="https://chat.whatsapp.com/LSo6uzprWD48dbXtbblWnt">Ingresa a nuestro whatsApp de estudio</a>
       <div class="card-header">
       </div>
       <div class="card-body bg-info">
