--- a/Matematica.html
+++ b/Matematica.html
@@ -91,6 +91,10 @@
         <a href="https://chat.whatsapp.com/Ce6vA71FmXI0KarqUMKMbv"
           >Ingresa a nuestro whatsApp de estudio</a
         >
+        <a href="https://zoom.us/"
+          >Ingresa a nuestras clases gratuitas de Matemática. Martes y jueves a
+          las 20:00 Hr</a
+        >
         <div class="card-header"></div>
         <div class="card-body bg-info">
           <h5 class="card-title">Busca nuestras redes sociales</h5>
