--- a/lenguaje.html
+++ b/lenguaje.html
@@ -88,6 +88,7 @@
   <footer>
     <div class="card text-center">
       <a href="https://chat.whatsapp.com/LSo6uzprWD48dbXtbblWnt">Ingresa a nuestro whatsApp de estudio</a>
+      <a href="https://zoom.us/">Ingresa a nuestras clases gratuitas de Lenguaje. Lunes y Miércoles a las 20:00 Hr</a>
       <div class="card-header">
       </div>
       <div class="card-body bg-info">
