Cambio en el formulario
Se cambia mensaje de error

--- a/contacto.html
+++ b/contacto.html
@@ -83,7 +83,7 @@
         <div class="p-5">
           <h3>Cuentanos si quieres inscribirte como alumno o tutor, y la asignatura de tu preferencia</h3>
           <textarea class="form-control col-md-12" placeholder="Escribe Tu Mensaje Aquí" id="mensaje" name="mensaje"></textarea>
-          <input href="" class="col-md-2" type="submit" value="Enviar Mensaje">
+          <input href="" class="col-md-2" type="submit" value="Mensaje">
         </div>
         <button type="submit" class="btn btn-primary">Registra</button>
       </form>
